--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_APP_POSTS_API=http://localhost:1337/api/posts?populate=thumbnail
+NEXT_APP_POSTS_API=http://localhost:1337/api/posts?populate=thumbnail,post_category
 NEXT_APP_CATS_API=http://localhost:1337/api/post-categories
 NEXT_APP_PAGES_API=http://localhost:1337/api/pages
