--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 NEXT_APP_POSTS_API=http://localhost:1337/api/posts?populate=thumbnail,post_category
 NEXT_APP_CATS_API=http://localhost:1337/api/post-categories
 NEXT_APP_PAGES_API=http://localhost:1337/api/pages
+
+
+NEXT_APP_page_API=http://localhost:1337/api/posts?filters[slug][$eq]=
