--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ NEXT_APP_PAGES_API=http://localhost:1337/api/pages
 
 
 NEXT_APP_page_API=http://localhost:1337/api/posts?filters[slug][$eq]=
+NEXT_APP_pagesQuery_API=http://localhost:1337/api/pages?filters[slug][$eq]=
+
+
+NEXT_APP_CATEGORY_FILTER=http://localhost:1337/api/post-categories?filters[name][$eq]=css&populate=*
