--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_APP_POSTS_API=http://localhost:1337/api/posts?populate=thumbnail,post_category
+NEXT_APP_POSTS_API=http://localhost:1337/api/posts?populate=thumbnail,post_category&pagination[page]
 NEXT_APP_CATS_API=http://localhost:1337/api/post-categories
 NEXT_APP_PAGES_API=http://localhost:1337/api/pages
 
